--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="left">
-                <img src="c:\Users\prajw\Desktop\WhatsApp Image 2025-05-04 at 22.56.22_8092b770.jpg"
+                <img src="https://cdn.prod.website-files.com/63a58f5eea7e9c9396453f5b/6502d68d234e96b2bf619f46_pexels-fauxels-3184611.webp"
                     alt="..">
             </div>
 
